Update academic category labels and actions

--- a/decplan.html
+++ b/decplan.html
@@ -392,7 +392,7 @@
                     <button class="filter-item" data-filter="completed">المكتملة</button>
                 </div>
                 <div class="filter-group">
-                    <button class="filter-item" data-category="academic">التحصيل الأكاديمي</button>
+                    <button class="filter-item" data-category="academic"> الإنجاز الأكاديمي</button>
                     <button class="filter-item" data-category="learning">مهارات التعلم</button>
                     <button class="filter-item" data-category="tests">الاختبارات</button>
                     <button class="filter-item" data-category="activities">الأنشطة والفعاليات</button>
@@ -437,15 +437,15 @@
             { id: 5, action: "الاحتفاء بإنجاز الطالبات في الأعمال الكتابية وتكريمهن", start: "2025/12/15", end: "2025/12/30", status: "نفذ", category: "academic", type: "تحفيزي", priority: "متوسطة" },
             { id: 6, action: "تكريم المعلمات المتميزات في متابعة الأعمال الكتابية بشكل دوري", start: "2025/12/20", end: "2025/12/30", status: "نفذ", category: "teachers", type: "تحفيزي", priority: "منخفضة" },
             { id: 7, action: "متابعة أثر التقدم في الأعمال الكتابية (التعايز، الفروق الفردي) ومقارنتها", start: "2025/12/1", end: "2025/12/30", status: "نفذ", category: "academic", type: "متابعة", priority: "عالية" },
-            { id: 8, action: "قياس مدى اكتساب الطالبات مهارات التعلم من خلال الزيارات الصغية", start: "2025/12/1", end: "2025/12/30", status: "نفذ", category: "learning", type: "متابعة", priority: "متوسطة" },
+            { id: 8, action: "قياس مدى اكتساب الطالبات المهارات الاساسية ومهارات التعلم من خلال الزيارات الصغية", start: "2025/12/1", end: "2025/12/30", status: "نفذ", category: "teachers", type: "متابعة", priority: "متوسطة" },
             { id: 9, action: "تدريب الطالبات على الاختبارات الوزارية والدولية خلال العام الدراسي", start: "2025/12/1", end: "2025/12/30", status: "نفذ", category: "tests", type: "تدريبي", priority: "عالية" },
             { id: 10, action: "تنفيذ ساعات ذهبية لتدريب الطالبات على الاختبارات المدرسية والوزارية والدولية", start: "2025/12/1", end: "2025/12/30", status: "نفذ", category: "tests", type: "تدريبي", priority: "عالية" },
             { id: 11, action: "تفعيل دور اللجان المدرسية والاذاعة الصباحية في الاختبارات الوزارية والدولية", start: "2025/12/1", end: "2025/12/30", status: "نفذ", category: "tests", type: "إشرافي", priority: "متوسطة" },
             { id: 12, action: "تطبيق لائحة الانضباط الطلابي لمعالجة المشاكل السلوكية", start: "2025/12/1", end: "2025/12/30", status: "نفذ", category: "behavior", type: "إداري", priority: "عالية" },
             { id: 13, action: "تنفيذ برامج ارشادية (نحلات الانضباط، أميرة سلوكي، الرحلات)", start: "2025/12/1", end: "2025/12/30", status: "نفذ", category: "behavior", type: "إرشادي", priority: "متوسطة" },
-            { id: 14, action: "متابعة انتظام الطالبات (التأخر والثياب)", start: "2025/12/1", end: "2025/12/30", status: "نفذ", category: "behavior", type: "متابعة", priority: "عالية" },
-            { id: 15, action: "تفعيل ركن المواطنة في كل الصفوف", start: "2025/12/1", end: "2025/12/15", status: "نفذ", category: "behavior", type: "تربوي", priority: "متوسطة" },
-            { id: 16, action: "تقديم أنشطة إثرائية صفية ولا صفية للطالبات تتناسب مع ميولهن وقدراتهن", start: "2025/12/1", end: "2025/12/30", status: "نفذ", category: "learning", type: "تعليمي", priority: "عالية" },
+            { id: 14, action: "متابعة انتظام الطالبات (التأخر والغياب)", start: "2025/12/1", end: "2025/12/30", status: "نفذ", category: "behavior", type: "متابعة", priority: "عالية" },
+            { id: 15, action: "تفعيل ركن المواطنة في كل الصفوف", start: "2025/12/1", end: "2025/12/15", status: "نفذ", category: "teachers", type: "تربوي", priority: "متوسطة" },
+            { id: 16, action: "تقديم أنشطة إثرائية صفية ولاصفية للطالبات تتناسب مع ميولهن وقدراتهن", start: "2025/12/1", end: "2025/12/30", status: "نفذ", category: "learning", type: "تعليمي", priority: "عالية" },
             { id: 17, action: "الاحتفاء بأعمال وإنجازات الطالبات الموهوبات", start: "2025/12/15", end: "2025/12/30", status: "نفذ", category: "activities", type: "تحفيزي", priority: "منخفضة" },
             { id: 18, action: "متابعة الطالبات في اللجان الخاصة أثناء فترة تقديم الاختبارات", start: "2025/12/15", end: "2025/12/30", status: "نفذ", category: "tests", type: "متابعة", priority: "عالية" },
             { id: 19, action: "تفعيل المناسبات والفعاليات المحلية والعالمية", start: "2025/12/1", end: "2025/12/30", status: "نفذ", category: "activities", type: "تربوي", priority: "متوسطة" },
@@ -453,9 +453,9 @@
             { id: 21, action: "تفعيل الجداريات المدرسية وإثرائها بأعمال الطالبات", start: "2025/12/1", end: "2025/12/30", status: "نفذ", category: "activities", type: "تربوي", priority: "منخفضة" },
             { id: 22, action: "متابعة الحضور والانصراف الآمن للطالبات", start: "2025/12/1", end: "2025/12/30", status: "نفذ", category: "safety", type: "متابعة", priority: "عالية" },
             { id: 23, action: "متابعة إدارة المدرسة لجوانب الصحة والسلامة في الأنشطة والفعاليات المدرسية", start: "2025/12/1", end: "2025/12/30", status: "نفذ", category: "safety", type: "متابعة", priority: "عالية" },
-            { id: 24, action: "تنفيذ مجتمعات التعلم ضمن مشروع بصمات ملهمة", start: "2025/12/1", end: "2025/12/30", status: "نفذ", category: "learning", type: "تعليمي", priority: "عالية" },
+            { id: 24, action: "تنفيذ مجتمعات التعلم ضمن مشروع بصمات ملهمة", start: "2025/12/1", end: "2025/12/30", status: "نفذ", category: "teachers", type: "تعليمي", priority: "عالية" },
             { id: 25, action: "تنفيذ جدول زيارات داخلية لمعلمات الأقسام الأكاديمية", start: "2025/12/1", end: "2025/12/30", status: "نفذ", category: "teachers", type: "متابعة", priority: "متوسطة" },
-            { id: 26, action: "متابعة تنفيذ الخطط التنفيذية والفصلية للأقسام", start: "2025/12/15", end: "2025/12/30", status: "نفذ", category: "teachers", type: "إداري", priority: "متوسطة" }
+            { id: 26, action: "متابعة تنفيذ الخطط التنفيذية والفصلية للأقسام", start: "2025/12/15", end: "2025/12/30", status: "نفذ", category: "admin", type: "إداري", priority: "متوسطة" }
         ];
 
         // إعدادات الترقيم الصفحي
@@ -476,7 +476,8 @@
                 const row = document.createElement('tr');
                 const statusClass = proc.status === 'نفذ' ? 'status-completed' : 'status-in-progress';
                 const categoryNames = {
-                    'academic': 'التحصيل الأكاديمي',
+                    'academic': 'الإنجاز الأكاديمي',
+                    'admin': 'القيادة والإدارة',
                     'learning': 'مهارات التعلم',
                     'tests': 'الاختبارات',
                     'activities': 'الأنشطة والفعاليات',
