--- a/sci1.html
+++ b/sci1.html
@@ -181,7 +181,8 @@
             return newArray;
         };
 
-        const REWARD_URL = "https://talented-nation.github.io/database/reward1.html";
+        // تم تحديث الرابط هنا حسب طلبك
+        const REWARD_URL = "https://talented-nation.github.io/database/sreward1.html";
 
         const App = () => {
             const [gameQuestions, setGameQuestions] = useState([]);
